--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     import { GLTFLoader } from 'https://unpkg.com/three@0.160.0/examples/jsm/loaders/GLTFLoader.js';
 
     // ====== TROCA RÁPIDA DO MODELO ======
-    const USE_KNOWN_TEST = true; // comece TRUE. se aparecer o capacete, mude pra FALSE e use seu gltf
+    const USE_KNOWN_TEST = false; // comece TRUE. se aparecer o capacete, mude pra FALSE e use seu gltf
     const MODEL_TEST = 'https://threejs.org/examples/models/gltf/DamagedHelmet/glTF/DamagedHelmet.gltf';
 
     const CONFIG = {
